--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,10 @@ a{
 .navbar ul li a:hover{
     color: #686868 !important;
 }
+.navbar-toggler{
+    color: white !important;
+    background-color: rgba(255, 255, 255, 0.32);
+}
 
 
 /* =============== navbar end ======================= */
@@ -187,3 +191,22 @@ a{
         opacity: 0.5;
     }
   
+
+
+
+    @media (max-width: 575.98px){
+        .main .item h1{
+            font-size: 28px;
+            letter-spacing: 10px;
+            
+        }
+        
+    }
+    @media (max-width: 767.98px){
+        .main .item h1{
+            font-size: 32px;
+            letter-spacing: 10px;
+            
+        }
+        
+    }
