--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,10 @@ a{
     position: fixed;
     top: 0;
     left: 60px;
+    margin-right: 60px;
     z-index: 10000;
 }
+
 .navbar ul li {
     padding: 0 10px;
 }
@@ -40,14 +42,7 @@ a{
     color: #686868 !important;
 }
 
-.navbar .navbar_row{
-    padding: 0 30px;
-    width: 1770px !important;
-    height: 160px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-}
+
 /* =============== navbar end ======================= */
 
 
