--- a/pages/about/about.css
+++ b/pages/about/about.css
@@ -81,7 +81,7 @@ body{
 }
 
 #banner .text{
-    padding-top: 25%;
+    padding-top: 19%;
     padding-left: 15%;
     padding-right: 15%;
 }
@@ -100,16 +100,16 @@ body{
     font-weight: 500;
 }
 #banner .signature{
-    margin-left: 197px;
-    margin-top: 50px;
+    margin-left: 25%;
+    margin-top: 40px;
 }
 #banner h2{
     font-size: 11px;
     font-weight: 700;
     color: white;
     letter-spacing: 2px;
-    margin-top: 100px;
-    margin-bottom: 40px;
+    margin-top: 70px;
+    margin-bottom: 30px;
 }
 #banner .editing_one{
     font-size: 10px;
@@ -118,7 +118,7 @@ body{
     letter-spacing: 2px;
     text-transform: uppercase;
     position: relative;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
 #banner .editing_one::after{
     content: '';
@@ -143,7 +143,7 @@ body{
     letter-spacing: 2px;
     text-transform: uppercase;
     position: relative;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
 #banner .editing_two::after{
     content: '';
