--- a/pages/gallery/gallery.css
+++ b/pages/gallery/gallery.css
@@ -125,7 +125,7 @@ body{
 #footer{
     background-color: rgba(0, 0, 0, 0.15);
     padding-top: 60px;
-    padding-bottom: 60x;
+    padding-bottom: 40px;
 }
 #footer h5{
     font-size: 12px;
