--- a/pages/gallery/gallery.css
+++ b/pages/gallery/gallery.css
@@ -158,21 +158,23 @@ body{
 
 /* ================ footer part ==================== */
 
+/* ============= back to top button ===================== */
+
 #button {
-  display: inline-block;
-  background-color: #555;
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  border-radius: 4px;
-  position: fixed;
-  bottom: 30px;
-  right: 30px;
-  transition: background-color .3s, 
+    display: inline-block;
+    background-color: #555;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    border-radius: 4px;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    transition: background-color .3s, 
     opacity .5s, visibility .5s;
-  opacity: 0;
-  visibility: hidden;
-  z-index: 1000;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1000;
 }
 #button::after {
   content: "\f077";
@@ -184,13 +186,42 @@ body{
   color: #fff;
 }
 #button:hover {
-  cursor: pointer;
-  background-color: #333;
+    cursor: pointer;
+    background-color: #333;
 }
 #button:active {
   background-color: #555;
 }
 #button.show {
-  opacity: 1;
+    opacity: 1;
   visibility: visible;
 }
+
+/* ============= back to top button ===================== */
+
+/* ============ responsive ==================== */
+
+@media (max-width: 991px){
+    #banner .img{
+        margin: auto;
+    }
+    .navbar ul{
+        width: 50%;
+        align-items: center;
+        background-color: #4c4c4c;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        border-radius: 20px;
+    }
+}
+
+@media (max-width: 1199px){
+    #banner .img{
+        width: 90%;
+    }
+    #banner .row{
+        row-gap: 0;
+    }
+}
+
+
