--- a/css/style.css
+++ b/css/style.css
@@ -17,17 +17,10 @@ a{
     display: inline-block;
 }
 
-
 /* =============== navbar start ======================= */
 .navbar{
     background-color: transparent;
-    position: fixed;
-    top: 0;
-    left: 60px;
-    margin-right: 60px;
-    z-index: 10000;
 }
-
 .navbar ul li {
     padding: 0 10px;
 }
@@ -42,7 +35,14 @@ a{
     color: #686868 !important;
 }
 
-
+.navbar .navbar_row{
+    padding: 0 30px;
+    width: 1770px !important;
+    height: 160px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+}
 /* =============== navbar end ======================= */
 
 
@@ -211,4 +211,14 @@ a{
             
         }
         
+    }
+    @media (max-width: 991px){
+        .navbar ul{
+            width: 50%;
+            align-items: center;
+            background-color: #4c4c4c;
+            padding-top: 20px;
+            padding-bottom: 20px;
+            border-radius: 20px;
+        }
     }
