--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,9 @@ a{
     display: flex;
     align-items: center;
 }
+.navbar-toggler{
+    background-color: rgba(255, 255, 255, 0.601);
+}
 /* =============== navbar end ======================= */
 
 
