--- a/pages/about/about.css
+++ b/pages/about/about.css
@@ -46,6 +46,9 @@ body{
     display: flex;
     align-items: center;
 }
+.navbar-toggler{
+    background-color: rgba(255, 255, 255, 0.601);
+}
 /* =============== navbar end ======================= */
 
 /* =============== banner start ===================== */
@@ -80,6 +83,7 @@ body{
     padding-top: 19%;
     padding-left: 15%;
     padding-right: 15%;
+    padding-bottom: 10%;
 }
 #banner h3{
     font-size: 11px;
@@ -90,7 +94,7 @@ body{
 }
 #banner p{
     font-size: 12px;
-    color: #787878 !important;
+    color: #787878 ;
     line-height: 30px;
     letter-spacing: 0.5px;
     font-weight: 500;
@@ -163,6 +167,7 @@ body{
     letter-spacing: 2px;
     text-transform: uppercase;
     position: relative;
+    
 }
 #banner .editing_three::after{
     content: '';
@@ -201,6 +206,24 @@ body{
         padding-top: 20px;
         padding-bottom: 20px;
         border-radius: 20px;
+    }
+    #banner .img_pad .img{
+        display: none;
+    }
+    #banner .text{
+        background-image: url(/pages/about/images/about_banner.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    p{
+        color:gray !important;
+    }
+    h4{
+        color: deeppink !important;
+    }
+    h4::after{
+        background-color: pink !important;
     }
     
 }
