--- a/pages/gallery/gallery.css
+++ b/pages/gallery/gallery.css
@@ -46,6 +46,9 @@ body{
     display: flex;
     align-items: center;
 }
+.navbar-toggler{
+    background-color: rgba(255, 255, 255, 0.601);
+}
 /* =============== navbar end ======================= */
 
 /* ================ banner part ==================== */
