--- a/pages/gallery/gallery.css
+++ b/pages/gallery/gallery.css
@@ -89,6 +89,7 @@ body{
 }
 #banner .img img{
     width: 100%;
+    transition: .3s ease-in-out;
 }
 #banner .img .icon{
     width: 80px;
@@ -109,6 +110,9 @@ body{
 }
 #banner .img .icon .search_icon{
     color: white;
+}
+#banner .img:hover img{
+    filter: blur(1.3px);
 }
 #banner .img:hover .icon{
      top: 50%;
